--- a/components/Articles/styles.module.scss
+++ b/components/Articles/styles.module.scss
@@ -14,7 +14,7 @@
     }
 
     &__img {
-        height: 190px;
+        object-fit: cover;
         filter: drop-shadow(0px 0px 20px rgba(86, 86, 86, 0.5));
         border-radius: 30px;
     }
@@ -102,8 +102,8 @@
         }
 
         &__img {
+            height: 160px;
             width: 100%;
-            height: auto;
         }
 
         &__item {
@@ -132,6 +132,9 @@
         &__info {
             align-items: center;
         }
+        &__img{
+            height: 210px;
+        }
     }
 }
 
@@ -143,6 +146,13 @@
 
         &__item {
             height: auto;
+        }
+    }
+}
+@media (max-width: 500px){
+    .articles{
+        &__img{
+            height: 180px;
         }
     }
 }
