--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -199,3 +199,22 @@ li {
 .modal__select__menu{
   margin-top: 0 !important;
 }
+.react-tabs__tab-list{
+  border-bottom: none !important;
+}
+.react-tabs__tab--selected{
+  font-family: 'Comfortaa';
+  border-color: transparent !important;
+  color: $green-color !important;
+}
+.program-swiper .swiper-pagination-bullet.swiper-pagination-bullet-active{
+  width: 200px !important;
+  background: transparent !important;
+}
+.program-swiper .swiper-pagination-bullet{
+  width: 200px !important;
+  background: transparent !important;
+}
+.program-swiper .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after,.swiper-button-next:after, .swiper-button-prev:after{
+  color: $green-color
+}
