--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,3 +6,7 @@
     width: 200px !important;
     background: transparent !important;
   }
+  .program__container{
+    width: 1300px;
+    margin: 0 auto;
+  }
