--- a/components/Program/styles.module.scss
+++ b/components/Program/styles.module.scss
@@ -12,4 +12,33 @@
     &__info{
         font-size: 16px;
     }
+    &__menu_wrap{
+        display: flex;
+        margin: 0 auto;
+        width:650px;
+        justify-content: space-between;
+        
+    }
+    &__wrap{
+        width: 700px;
+        background: #F5FAFF;
+        box-shadow: 0px 0px 40px rgba(86, 86, 86, 0.3);
+        border-radius: 30px;
+        box-sizing: border-box;
+    }
+    &__name{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 190px;
+    }
+    &__menu{
+        display: flex;
+        width: 480px;
+        justify-content: space-between;
+    }
+    &__menu_name{
+        width: 500px;
+    }
+
 }
