--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,5 +8,10 @@
   }
   .program__container{
     width: 1300px;
-    margin: 0 auto;
+    margin: 50px auto 0;
+  }
+  @media (max-width:1300px){
+    .program__container{
+      width: 95%;
+    }
   }
