--- a/components/PhotosSwiper/styles.module.scss
+++ b/components/PhotosSwiper/styles.module.scss
@@ -2,7 +2,7 @@
     
     .photo {
       margin-right: 20px; // margin to create space between slides
-  
+      margin-top: 80px;
       .photo__img {
         width: 380px;
         max-width: 100%;
